Fix class methods and test on main