@@ -1,38 +1,56 @@
 package com.paypay.queue;
 
+import java.util.Collections;
 import java.util.LinkedList;
+import java.util.List;
 
 public final class QueueImpl<T> implements Queue {
 
-  private final LinkedList<T> nodes;
+  private final List<T> nodes;
 
   public QueueImpl() {
     this.nodes = new LinkedList<>();
   }
 
-  public QueueImpl(LinkedList<T> nodes) {
-    this.nodes = nodes;
+  public QueueImpl(List<T> nodes) {
+    List<T> tempNode = new LinkedList<>();
+    tempNode.addAll(nodes);
+    this.nodes = Collections.unmodifiableList(tempNode);
   }
 
   @Override
   public Queue enQueue(Object o) {
-    nodes.add((T)o);
-    return new QueueImpl(nodes);
+    List<T> tempNode = new LinkedList<>();
+    for (T t : nodes) {
+      tempNode.add(t);
+    }
+    tempNode.add((T)o);
+    return new QueueImpl(tempNode);
   }
 
   @Override
   public Queue deQueue() {
-    nodes.pop();
-    return new QueueImpl(nodes);
+    List<T> tempNode = new LinkedList<>();
+    if (!isEmpty()){
+      tempNode.addAll(nodes);
+      tempNode.remove(0);
+      return new QueueImpl(tempNode);
+    }
+    return new QueueImpl();
   }
 
   @Override
   public Object head() {
-    return nodes.getFirst();
+    return nodes.get(0);
   }
 
   @Override
   public boolean isEmpty() {
     return nodes.isEmpty();
+  }
+
+  @Override
+  public List<T> print() {
+    return nodes;
   }
 }
